# tracedistill

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
code/: training.py
competition/: README.md  training.py
data/: README.md
docs/: dataset.md  model-card.md  solution.md
examples/: gsm8k_trace_distillation.py
examples/configs/: quickstart.yaml  reproduce_competition.yaml
src/tracedistill/: __init__.py  data.py  formatting.py  lora.py  run.py  sampling.py  training.py
tests/: conftest.py  reference_impl.py  test_data.py  test_formatting.py  test_lora.py  test_run.py  test_sampling.py
